--- a/style.css
+++ b/style.css
@@ -474,6 +474,21 @@ h1 a:hover
     
 }
 
+.iframe-container{
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; 
+    height: 0;
+  }
+  .iframe-container iframe{
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+
 .web-dev-container p{
     font-size: 1.2rem;
 }
