--- a/style.css
+++ b/style.css
@@ -1,5 +1,17 @@
 * {
   box-sizing: border-box;
+    cursor: none;
+} 
+
+@media only screen and (max-width: 850px) {
+*{
+  cursor: pointer;
+}
+.follow-cursor{
+  display: none;
+}
+
+
 }
 
 :root {
@@ -165,7 +177,7 @@ h2 {
   font-style: italic;
 }
 
-@media (max-width: 550px) {
+@media only screen and (max-width: 550px) {
   .selfie-container {
     background-color: rgba(0, 0, 0, 0);
 
@@ -244,7 +256,7 @@ h2 {
   align-self: center;
 }
 
-@media (max-width: 1400px) {
+@media only screen and (max-width: 1400px) {
   .text-container {
     margin: auto;
     margin-top: 5%;
@@ -259,7 +271,7 @@ h2 {
     font-size: 1rem;
   }
 }
-@media (max-width: 1050px) {
+@media only screen and (max-width: 1050px) {
   .text-container {
     margin: auto;
     margin-top: 5%;
@@ -287,7 +299,7 @@ h2 {
   }
 }
 
-@media (max-width: 650px) {
+@media screen and (max-width: 900px) {
   .main-container {
     margin: auto;
     margin-top: 1vh;
@@ -310,8 +322,8 @@ h2 {
     height: 40%;
     background-color: white;
     flex-direction: row;
-    border: dashed;
-    border-color: var(--highlighted-color);
+   
+    border-color: black;
     margin-top: 3%;
     transition: all ease 200ms;
   }
@@ -490,4 +502,16 @@ p a:hover {
   color: var(--highlighted-color);
   background-image: none;
   font-style: italic;
+}
+
+.follow-cursor{
+ 
+  z-index: 5;
+    position: fixed;
+    width: 15px;
+    height: 15px;
+    background-color: var(--highlighted-color-trans);
+    /* transition: 300ms; */
+    border-radius: 50%;
+    pointer-events: none;
 }
